# corrosion

./: CMakeLists.txt  build.sh
cmake/: Corrosion.cmake
cpp/include/Test/: Test.hpp
cpp/src/: Test.cpp
rust/: Cargo.toml
rust/src/: lib.rs
